# shift-calibration-lab

./: CITATION.cff  README.md  pyproject.toml
configs/: digits_baseline.yaml  digits_shift_sweep.yaml
outputs/digits_baseline/: clean_vs_shifted.json  report.md
outputs/digits_baseline/artifacts/: run_metadata.json
outputs/digits_baseline/tables/: clean_metrics_summary.csv  per_sample_clean_predictions.csv
outputs/digits_shift_sweep/: clean_vs_shifted.json  report.md
outputs/digits_shift_sweep/artifacts/: run_metadata.json
outputs/digits_shift_sweep/tables/: clean_metrics_summary.csv  per_sample_clean_predictions.csv  shift_metrics_summary.csv
scripts/: package_project.py  run_baseline.py  run_shift_sweep.py
src/scalab/: cli.py  config.py  runtime.py
src/scalab/calibration/: adaptive.py  features.py  temperature.py
src/scalab/datasets/: base.py  digits.py  registry.py
src/scalab/experiment/: records.py  runner.py
src/scalab/metrics/: calibration.py  classification.py  summary.py
src/scalab/models/: base.py  mlp.py  registry.py
src/scalab/reporting/: plots.py  report.py
src/scalab/shifts/: image.py  registry.py
src/scalab/utils/: io.py  math_ops.py  randomness.py
src/shift_calibration_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_metrics.py  test_shifts.py  test_temperature.py
